--- a/rois/templates/monor/css/mono_main.scss
+++ b/rois/templates/monor/css/mono_main.scss
@@ -11,7 +11,6 @@
 }
 
 //iOS対策
-
 label {  
 	cursor: pointer;
 }  
@@ -90,17 +89,32 @@ footer {
 	@extend .thread;
 	text-align: right;
 }
-input, textarea {
+
+// 押すボタンやinput:1 テキストエリア、書くinptutなど:-1
+@mixin txt_box($box){
 	border-style: solid;
-	border-color: $b_border_u $b_border $b_border $b_border_u;
 	border-width: 1px;
 	padding: 2px;
-	color: $form_txt;
-	background-color: $form_txt_bk;
+	@if $box == 1 {
+		border-color: $b_border $b_border_u $b_border_u $b_border;
+		color: $button_moji;
+		background-color: $button;
+	} @else if $box == -1 {
+		border-color: $b_border_u $b_border $b_border $b_border_u;
+		color: $form_txt;
+		background-color: $form_txt_bk;
+	} @else {
+		background-color: $button;
+		border-color: $b_border $b_border_u $b_border_u $b_border;
+		color: $button_moji;
+	}
+}
+
+input, textarea {
+	@include txt_box(-1);
 }
 select {
-	@extend input;
-	padding: 2px;
+	@include txt_box(-1);
 	vertical-align: middle;
 }
 input[name="picw"], input[name="pich"], input[name="delno"] {
@@ -110,13 +124,12 @@ input[name="pwd"] {
 	width: 6em;
 }
 input[type="submit"] {
-	background-color: $button;
-	border-color: $b_border $b_border_u $b_border_u $b_border;
-	color: $button_moji;
+	@include txt_box(1);
 	padding-left: 4px;
 	padding-right: 4px;
 }
 input[name="upfile"] {
+	@include txt_box(1);
 	width: 10em;
 }
 //スポンボタン（上下の矢印ボタン）を非表示にする
@@ -218,17 +231,12 @@ h5 {
 	text-align: right;
 }
 button {
-	@extend input[type="submit"];
-	border-style: solid;
+	@include txt_box(1);
 	padding-left: 4px;
 	padding-right: 4px;
-	background-color: $button;
-	color: $button_moji;
 }
 .button {
-	@extend button;
-	border-width: 1px;
-	border-style: solid;
+	@include txt_box(1);
 	padding: 2px 6px;
 	display: inline-block;
 	a {
@@ -250,6 +258,9 @@ button {
 	> * {
 		display: inline-block;
 		vertical-align: middle;
+	}
+	.palette .palette_set {
+		@include txt_box(-1);
 	}
 }
 .NEO {
