--- a/rois/templates/monored/css/_mono.scss
+++ b/rois/templates/monored/css/_mono.scss
@@ -10,7 +10,27 @@
 
 label {  
 	cursor: pointer;
-}  
+}
+
+// 押すボタンやinput:1, テキストエリア、書くinptutなど:-1
+@mixin txt_box($box){
+	border-style: solid;
+	border-width: 1px;
+	padding: 2px;
+	@if $box == 1 {
+		border-color: $b_border $b_border_u $b_border_u $b_border;
+		color: $button_moji;
+		background-color: $button;
+	} @else if $box == -1 {
+		border-color: $b_border_u $b_border $b_border $b_border_u;
+		color: $form_txt;
+		background-color: $form_txt_bk;
+	} @else {
+		background-color: $button;
+		border-color: $b_border $b_border_u $b_border_u $b_border;
+		color: $button_moji;
+	}
+}
 
 //全体的指定
 body {
@@ -100,16 +120,10 @@ footer {
 	text-align: right;
 }
 input, textarea {
-	border-style: solid;
-	border-color: $b_border_u $b_border $b_border $b_border_u;
-	border-width: 1px;
-	padding: 2px;
-	color: $form_txt;
-	background-color: $form_txt_bk;
+	@include txt_box(-1);
 }
 select {
-	@extend input;
-	padding: 2px;
+	@include txt_box(-1);
 	vertical-align: middle;
 }
 input[name="picw"], input[name="pich"], input[name="delno"] {
@@ -119,13 +133,12 @@ input[name="pwd"] {
 	width: 6em;
 }
 input[type="submit"] {
-	background-color: $button;
-	border-color: $b_border $b_border_u $b_border_u $b_border;
-	color: $button_moji;
+	@include txt_box(1);
 	padding-left: 4px;
 	padding-right: 4px;
 }
 input[name="upfile"] {
+	@include txt_box(1);
 	width: 10em;
 }
 input[type="color"] {
@@ -230,18 +243,14 @@ h5 {
 	text-align: right;
 }
 button {
-	@extend input[type="submit"];
-	border-style: solid;
-	border-width: 1px;
+	@include txt_box(1);
 	padding-left: 4px;
 	padding-right: 4px;
 	background-color: $button;
 	color: $button_moji;
 }
 .button {
-	@extend button;
-	border-width: 1px;
-	border-style: solid;
+	@include txt_box(1);
 	padding: 2px 6px;
 	display: inline-block;
 	a {
@@ -252,9 +261,9 @@ button {
 .oyat {
 	border-left: solid 1ex $border;
 	@if $dev == 1 {
-		background: linear-gradient(to right, $th_bg, lighten($th_bg,20%), $th_bg + #220011) fixed;
+		background: linear-gradient(to right, $th_bg, lighten($th_bg,20%), adjust-hue(lighten($th_bg, 10%),20deg)) fixed;
 	} @else if $dev == -1 {
-		background: linear-gradient(to right, $th_bg, darken($th_bg,15%), $th_bg - #220011) fixed;
+		background: linear-gradient(to right, $th_bg, darken($th_bg,15%), adjust-hue(darken($th_bg, 10%),-20deg)) fixed;
 	} @else {
 		background: $th_bg;
 	}
@@ -269,6 +278,9 @@ button {
 	> * {
 		display: inline-block;
 		vertical-align: middle;
+	}
+	.palette .palette_set {
+		@include txt_box(-1);
 	}
 }
 .NEO {
