--- a/rois/templates/monored/css/_mono_sql_conf.scss
+++ b/rois/templates/monored/css/_mono_sql_conf.scss
@@ -36,7 +36,7 @@ $bar: #6B6EA6;				//バー
 $tool_button: #D2D9FC;		//ツールボタン「鉛筆」とか
 $tool_button2: #9398B1;	//選択中ツールボタン
 $tool_text: #59587E;		//ツールボタンの文字
-$tool_bar: #7376A7;		//ツールバーの色
+$tool_bar: #D2D8EE;		//ツールバーの色
 $tool_frame: #AEB3D2;		//フレームの色
 //--------
 $cat_img_size: 150px;	//カタログモードのイメージサイズ
