--- a/rois/templates/monored/css/_mono.scss
+++ b/rois/templates/monored/css/_mono.scss
@@ -256,6 +256,11 @@ button {
 	a {
 		text-decoration: none;
 		color: $button_moji;
+		svg {
+			fill: $button_moji;
+			width: 12px;
+			height: 12px;
+		}
 	}
 }
 .oyat {
