--- a/rois/templates/monor/css/_mono_conf.scss
+++ b/rois/templates/monor/css/_mono_conf.scss
@@ -15,8 +15,10 @@ $button: #369;			//返信とかのボタン
 $button_moji: #FFF;		//ボタンの文字色
 $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #FFF;	//テキスト入力欄の背景色
+$title: #036;			//スレタイトルの文字色
 
 $th_bg: #9CF;           //スレタイトルの背景
+$th_title: #006;		//スレタイトルの文字色
 $border: #036;          //ボーダーとスレタイトルの左
 $b_border: #36F;        //ボタンのボーダー
 $b_border_u: #036;       //ボタンのボーダーその2
