--- a/rois/templates/monor/css/mono_main.scss
+++ b/rois/templates/monor/css/mono_main.scss
@@ -252,6 +252,7 @@ button {
 .oyat {
 	border-left: solid 1ex $border;
 	background-color: $th_bg;
+	color: $th_title;
 	padding: 0.2em;
 }
 .oekaki {
