--- a/rois/templates/monored/css/_mono_deep_conf.scss
+++ b/rois/templates/monored/css/_mono_deep_conf.scss
@@ -22,6 +22,7 @@ $button_moji: #FFF;		//ボタンの文字色
 $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #EEEEEE;	//テキスト入力欄の背景色
 $th_bg: #111111;        //スレタイトルの背景と削除画面のテーブルの奇数行
+$th_title: #FEC;		//スレタイトルの文字色
 
 $limit: #321;           //もうすぐ消える&省略の背景色
 
