--- a/rois/templates/monored/css/_mono_dev_conf.scss
+++ b/rois/templates/monored/css/_mono_dev_conf.scss
@@ -21,7 +21,8 @@ $button: #396;			//返信とかのボタン
 $button_moji: #FFF;		//ボタンの文字色
 $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #EEEEEE;	//テキスト入力欄の背景色
-$th_bg: #221111;        //スレタイトルの背景と削除画面のテーブルの奇数行
+$th_bg: #181111;        //スレタイトルの背景と削除画面のテーブルの奇数行
+$th_title: #CCE;		//スレタイトルの文字色
 
 $limit: #321;           //もうすぐ消える&省略の背景色
 
