--- a/rois/templates/monored/css/_mono_red_conf.scss
+++ b/rois/templates/monored/css/_mono_red_conf.scss
@@ -22,6 +22,7 @@ $button_moji: #FFF;		//ボタンの文字色
 $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #EEDDDD;	//テキスト入力欄の背景色
 $th_bg: #ffaaaa;        //スレタイトルの背景と削除画面のテーブルの奇数行
+$th_title: #130;		//スレタイトルの文字色
 
 $limit: #99BBAA;           //もうすぐ消える&省略の背景色
 
