--- a/rois/templates/monored/css/_mono_sql_conf.scss
+++ b/rois/templates/monored/css/_mono_sql_conf.scss
@@ -22,6 +22,7 @@ $button_moji: #000;		//ボタンの文字色
 $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #FFFFFF;	//テキスト入力欄の背景色
 $th_bg: #EEE0D7;        //スレタイトルの背景と削除画面のテーブルの奇数行
+$th_title: #2F7448;		//スレタイトルの文字色
 
 $limit: #52745E;           //もうすぐ消える&省略の背景色
 
