--- a/rois/templates/monored/css/_mono_main_conf.scss
+++ b/rois/templates/monored/css/_mono_main_conf.scss
@@ -20,6 +20,7 @@ $form_txt: #000;		//テキスト入力欄の文字色
 $form_txt_bk: #FFF;	//テキスト入力欄の背景色
 
 $th_bg: #9CF;           //スレタイトルの背景
+$th_title: #006;		//スレタイトルの文字色
 $border: #036;          //ボーダーとスレタイトルの左
 $b_border: #36F;        //ボタンのボーダー
 $b_border_u: #036;       //ボタンのボーダーその2
