--- a/rois/templates/monored/css/_mono_main_conf.scss
+++ b/rois/templates/monored/css/_mono_main_conf.scss
@@ -28,18 +28,18 @@ $b_border_u: #036;       //ボタンのボーダーその2
 $limit: #FCC;           //もうすぐ消える&省略の背景色
 
 //NEO色指定
-$bk: #69F;				//アプレット背景
-$bk2: #369;				//アプレット背景の網状のあれ
-$tool_icon: #396;		//「窓」とか
-$icon: #063;			//
-$iconselect: #063;		//選択してるアイコン
+$bk: #999;				//アプレット背景
+$bk2: #567;				//アプレット背景の網状のあれ
+$tool_icon: #444;		//「窓」とか
+$icon: #333;			//
+$iconselect: #333;		//選択してるアイコン
 $text: #FFF;			//文字
-$bar: #369;				//バー
-$tool_button: #669;		//ツールボタン「鉛筆」とか
-$tool_button2: #336;	//選択中ツールボタン
+$bar: #666;				//バー
+$tool_button: #778;		//ツールボタン「鉛筆」とか
+$tool_button2: #445;	//選択中ツールボタン
 $tool_text: #FFF;		//ツールボタンの文字
-$tool_bar: #69F;		//ツールバーの色
-$tool_frame: #369;		//フレームの色
+$tool_bar: #89A;		//ツールバーの色
+$tool_frame: #666;		//フレームの色
 
 //--------
 $cat_img_size: 150px;	//カタログモードのイメージサイズ
