--- a/rois/templates/monored/css/_mono_mayo_conf.scss
+++ b/rois/templates/monored/css/_mono_mayo_conf.scss
@@ -27,17 +27,17 @@ $th_title: #123;		//スレタイトルの文字色
 $limit: #CCF;           //もうすぐ消える&省略の背景色
 
 //NEO色指定
-$bk: #F96;				//アプレット背景
-$bk2: #963;				//アプレット背景の網状のあれ
-$tool_icon: #693;		//「窓」とか
-$icon: #360;			//
-$iconselect: #360;		//選択してるアイコン
+$bk: #999;				//アプレット背景
+$bk2: #766;				//アプレット背景の網状のあれ
+$tool_icon: #444;		//「窓」とか
+$icon: #333;			//
+$iconselect: #333;		//選択してるアイコン
 $text: #FFF;			//文字
-$bar: #963;				//バー
-$tool_button: #966;		//ツールボタン「鉛筆」とか
-$tool_button2: #633;	//選択中ツールボタン
+$bar: #765;				//バー
+$tool_button: #877;		//ツールボタン「鉛筆」とか
+$tool_button2: #544;	//選択中ツールボタン
 $tool_text: #FFF;		//ツールボタンの文字
-$tool_bar: #F96;		//ツールバーの色
-$tool_frame: #963;		//フレームの色
+$tool_bar: #A98;		//ツールバーの色
+$tool_frame: #765;		//フレームの色
 //--------
 $cat_img_size: 150px;	//カタログモードのイメージサイズ
