--- a/rois/templates/monored/css/mono_red.css
+++ b/rois/templates/monored/css/mono_red.css
@@ -313,40 +313,40 @@ button {
 }
 
 .NEO .color_bk {
-  color: #F96;
+  color: #999;
 }
 .NEO .color_bk2 {
-  color: #963;
+  color: #766;
 }
 .NEO .color_tool_icon {
-  color: #693;
+  color: #444;
 }
 .NEO .color_icon {
-  color: #360;
+  color: #333;
 }
 .NEO .color_iconselect {
-  color: #360;
+  color: #333;
 }
 .NEO .color_text {
   color: #FEE;
 }
 .NEO .color_bar {
-  color: #963;
+  color: #765;
 }
 .NEO .tool_color_button {
-  color: #966;
+  color: #877;
 }
 .NEO .tool_color_button2 {
-  color: #633;
+  color: #544;
 }
 .NEO .tool_color_text {
   color: #FFF;
 }
 .NEO .tool_color_bar {
-  color: #F96;
+  color: #A98;
 }
 .NEO .tool_color_frame {
-  color: #963;
+  color: #765;
 }
 
 .palette {
