--- a/rois/templates/monored/css/mono_deep.css
+++ b/rois/templates/monored/css/mono_deep.css
@@ -364,6 +364,10 @@ button {
   font-weight: bold;
 }
 
+#cp {
+  scroll-behavior: smooth;
+}
+
 #catalog {
   display: flex;
   flex-direction: row;
