--- a/rois/templates/monor/css/mono_main.css
+++ b/rois/templates/monor/css/mono_main.css
@@ -423,4 +423,5 @@ button {
   #appstage {
     display: block;
   }
-}/*# sourceMappingURL=mono_main.css.map */
+}
+/*# sourceMappingURL=mono_main.css.map */
