--- a/rois/templates/neex/scss/deep/neex.scss
+++ b/rois/templates/neex/scss/deep/neex.scss
@@ -18,10 +18,6 @@ label {
 
 // 押すボタンやinput:1, テキストエリア、書くinptutなど:-1
 @mixin txt_box($box){
-	border-style: solid;
-	border-radius: 6px;
-	border-width: 1px;
-	padding: 2px;
 	@if $box == 1 {
 		border-color: $b_border $b_border_u $b_border_u $b_border;
 		color: $button_moji;
@@ -39,11 +35,7 @@ label {
 
 //スレッドとかフッダーとかボックス
 @mixin mainbox{
-	border-radius: 16px;
 	background-color: $haikei;
-	margin-left: 360px;
-	margin-right: 20px;
-	padding: 1em;
 }
 
 //全体的指定
@@ -59,9 +51,6 @@ body {
 		background: $ushiro;
 	}
 	color: $moji;
-	font-family: sans-serif;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
 }
 a {
 	color: $moji;
@@ -80,37 +69,17 @@ a {
 }
 
 hr {
-	border-style: dashed;
-	border-width: 1px 0 0 0;
 	border-color: $border;
-	margin: 1ex auto;
-	clear: left;
 }
 
 //----------
 
 header > .titlebox {
-	position: fixed;
-	width: 300px;
-	padding: 10px;
 	background-color: $haikei;
-	border-radius: 16px;
-	top: 10px;
-	left: 20px;
-	ul {
-		font-size: smaller;
-		margin-left: 12px;
-	}
-	+ div {
-		@include mainbox();
-		text-align: right;
-		margin-top: 10px;
-	}
 }
 
 h1 {
 	a {
-		text-decoration: none;
 		&:visited {
 			color: $link_visited;
 		}
@@ -118,9 +87,6 @@ h1 {
 			color: $link_hover;
 		}
 	}
-}
-main {
-	display: block;
 }
 
 input, textarea {
@@ -130,70 +96,21 @@ select {
 	@include txt_box(-1);
 	vertical-align: middle;
 }
-input[name="picw"], input[name="pich"], input[name="delno"] {
-	width: 3em;
-}
-input[name="pwd"] {
-	width: 6em;
-}
 input[type="submit"] {
 	@include txt_box(1);
-	padding-left: 4px;
-	padding-right: 4px;
 }
 input[name="upfile"] {
 	@include txt_box(1);
-	width: 10em;
 }
-input[type="color"] {
-	height: 1em;
-}
-//スポンボタン（上下の矢印ボタン）を非表示にする
-input[type="number"] {
-	-moz-appearance: textfield;
-	&::-webkit-outer-spin-button {
-		-webkit-appearance: none;
-		margin: 0;
-	}
-	&::-webkit-inner-spin-button {
-		-webkit-appearance: none;
-		margin: 0;
-	}
-}
+
 em.thispage {
 	font-style: normal;
 	font-weight: bold;
 }
 //----------
 
-.thread {
-	@include mainbox();
-	margin-top: 1.5em;
-	margin-bottom: 1.5em;
-	.thfoot {
-		text-align: right;
-	}
-}
-.search_box {
-	font-size: smaller;
-}
-.delf {
-	font-size: smaller;
-}
-
-p.sysmsg {
-	display: inline;
-}
-
 figure {
-	float: left;
-	padding-right: 8px;
 	background-color: $haikei;
-	margin-bottom: 1ex;
-	img {
-		max-width: 400px;
-		height: auto;
-	}
 }
 figcaption {
 	font-size: smaller;
@@ -207,76 +124,34 @@ p.oya {
 }
 
 .oyaname {
-	line-height: 1em;
-    border: solid 1px $button;
-    border-radius: 5px;
-	display: inline-block;
-    a {
-		text-decoration: none;
-        display: block;
-		padding: 5px;
-		color: inherit;
-    }
+    border-color: $button;
 }
 .oyaname:hover {
     background-color: $ushiro;
 }
-h4#oya {
-	margin-top: 1ex;
-}
 
 .res {
-	border-top: dashed 1px $border;
-	margin-top: 1em;
-	section {
-		margin-top: 1em;
-		display: inline-block;
-		max-width: 100%;
-	}
-	h3 {
-		font-size: 100%;
-		margin-bottom: 0ex;
-	}
-	h4 {
-		font-size: 100%;
-		margin-bottom: 1ex;
-	}
-	figure {
-		float: none;
-	}
+	border-color: $border;
 }
 .limit {
-	margin-top: 1em;
 	background-color: $limit;
 }
 
-h5 {
-	font-weight: normal;
-}
-
 .resma {
-	display: block;
 	color: $resmoji;
 	background-color: $ushiro;
 }
 button {
 	@include txt_box(1);
-	padding-left: 4px;
-	padding-right: 4px;
 	background-color: $button;
 	color: $button_moji;
 }
 .button {
 	@include txt_box(1);
-	padding: 2px 6px;
-	display: inline-block;
 	a {
-		text-decoration: none;
 		color: $button_moji;
 		svg {
 			fill: $button_moji;
-			width: 12px;
-			height: 12px;
 		}
 	}
 }
@@ -289,26 +164,12 @@ button {
 	} @else {
 		background: $th_bg;
 	}
-	padding: 0.2em;
 	color: $th_title;
-}
-footer {
-	@include mainbox();
-	text-align: right;
-	margin-bottom: 20px;
-	margin-top: 20px;
 }
 
 //----------
-.oekaki {
-	font-size: smaller;
-}
+
 #appstage {
-	@include mainbox();
-	margin-top: 1.5em;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	.palette .palette_set {
 		@include txt_box(-1);
 	}
@@ -327,109 +188,18 @@ footer {
 	.tool_color_bar { color: $tool_bar; }
 	.tool_color_frame { color: $tool_frame; }
 }
-.palette {
-	width: 180px;
-	fieldset {
-		text-align: center;
-	}
-}
-.c {
-	text-align: center;
-}
 
-.siihelp{
+.siihelp {
 	h2 {
 		@extend .oyat
 	}
-	dt {
-		font-weight: bold;
-	}
-	ul {
-		margin-left: 20px;
-	}
 }
 
-#cp {
-	margin-top: 160px;
-	scroll-behavior: smooth;
-	margin-bottom: 1.5em;
-}
 //----------
-
-#catalog {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	div {
-		width: $cat_img_size + 16px;
-		text-align: center;
-		overflow: hidden;
-	}
-	p {
-		margin: 0.5ex auto;
-	}
-	img {
-		width: $cat_img_size;
-	}
-}
 
 .delfo {
 	font-size: smaller;
 	th, td {
-		border: 1px solid $ushiro;
-	}
-}
-.ppost {
-	clear: left;
-}
-
-//----------
-//以下レスポンシブ対応
-@media screen and (max-width: 1024px) {
-	.res {
-		clear: left;
-	}
-}
-@media screen and (max-width: 450px) {
-	header {
-		width: auto;
-		position: relative;
-		.titlebox {
-			width: auto;
-			margin: 20px;
-			position: relative;
-			top: unset;
-			left: unset;
-			+ div {
-				width: auto;
-				position: relative;
-				margin: 20px;
-			}
-		}
-	}
-	.thread {
-		display: block;
-		margin: 20px;
-	}
-	#paintmode {
-		header {
-			width: auto;
-			position: relative;
-			margin: 20px;
-		}
-	}
-	#appstage {
-		display: block;
-	}
-	#cp {
-		margin-top: 1.5em;
-		scroll-behavior: smooth;
-		margin-bottom: 1.5em;
-	}
-	footer {
-		width: auto;
-		position: relative;
-		text-align: right;
-		margin: 20px;
+		border-color: $ushiro;
 	}
 }
